# image_viewer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: settings.example.json
docs/: code_review.md  options.md  suite.md
scripts/: run_ubuntu.sh
src/: app.py
src/image_viewer/: __init__.py  __main__.py  app.py  browser_filter.py  gallery_layout.py  gallery_view.py  logging_config.py  name_conflict_dialog.py  onboarding_dialog.py  operation_log.py  organize_ops.py  settings_store.py  slideshow.py  sorting_rules.py  sources.py  toast.py
tests/: test_app_syntax.py  test_browser_filter.py  test_gallery_layout.py  test_operation_log.py  test_organize_ops.py  test_settings_store.py  test_slideshow.py  test_sorting_rules.py
